--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         clockDisplayElement.innerHTML = new Date(Date.now());
 
         // and then every 1 second after that update the clock
-                setInterval(() =>{
-            console.log("log happens after one second")
-            clockDisplayElement.innerHTML = new Date(Date.now()).toLocaleString();
-        }, 1000)
+        //         setInterval(() =>{
+        //     console.log("log happens after one second")
+        //     clockDisplayElement.innerHTML = new Date(Date.now()).toLocaleString();
+        // }, 1000)
 
         console.log("log happens immediately")
         // setTimeout(() =>{
@@ -33,5 +33,6 @@
         
         // console.log("c");
     </script>
+    <script src="./notifier.js"></script>
 </body>
 </html>
